Fixed alignment for .header-is-sticky

--- a/src/components/fullscreen/style.less
+++ b/src/components/fullscreen/style.less
@@ -79,7 +79,7 @@
 
     .icon-fullscreen {
       font-size: 1em;
-      margin-right:-7px;
+      margin-right:-8px;
 
       &:before {
         padding: 2px 5px;
@@ -88,3 +88,16 @@
     }
   }
 }
+
+:host-context(.app.header-is-sticky) {
+
+  a {
+
+    .icon-fullscreen {
+      margin-right:-11px;
+
+    }
+  }
+}
+
+
